--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>telugu-blessing-kit</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Kunchala's Housewarming Ceremony</title>
+    <link rel="icon" href="/lovable-uploads/FavIcon.jpg" type="image/jpg" />
+    <meta name="description" content="Join us for our Home Blessing and Housewarming Ceremony!" />
+    <meta name="author" content="Kunchala Srinadh" />
 
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400&family=Montserrat:wght@300;400;500;600;700&family=Dancing+Script:wght@400;700&display=swap" rel="stylesheet">
-
-    <meta property="og:title" content="telugu-blessing-kit" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:title" content="Kunchala's Housewarming Ceremony Invitation" />
+    <meta property="og:description" content="Join us for the Home Blessing and Housewarming Ceremony. Your presence will make our day special!" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:url" content="https://kunchalas-housewarmingceremony.vercel.app/" />
+    <meta property="og:image" content="https://kunchalas-housewarmingceremony.vercel.app/lovable-uploads/KunchalasInvitation.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@KunchalaSrinadh" />
+    <meta name="twitter:image" content="https://kunchalas-housewarmingceremony.vercel.app/lovable-uploads/KunchalasInvitation.jpg" />
+    
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600;700&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400;500;600;700&display=swap">
   </head>
 
   <body>
     <div id="root"></div>
+    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
